add: admin handler for remove tags
